--- a/recharge.html
+++ b/recharge.html
@@ -190,7 +190,7 @@
                     <img src="https://image.noelshack.com/fichiers/2024/47/3/1732066564-images.png" alt="WAVE">
                     <p>WAVE</p>
                 </div>
-                <div class="operator" data-operator="USDT">
+                <div class="operator" data-operator="USDT" data-number="TR62NjKQASXmmKrxzQsCvDvxYQ71nsV3Pv">
                     <img src="https://image.noelshack.com/fichiers/2024/47/3/1732066635-images-1.png" alt="USDT">
                     <p>USDT TROC 20</p>
                 </div>
@@ -198,7 +198,7 @@
 
             <form id="rechargeForm">
                 <div class="form-group">
-                    <label>Montant à recharger (Minimum 1500 XOF)</label>
+                    <label>Montant à recharger (Minimum 3000 XOF)</label>
                     <input type="number" min="3000" class="input" id="amount" required placeholder="Entrez le montant">
                     <div class="error-message" id="amountError"></div>
                 </div>
