--- a/investments.html
+++ b/investments.html
@@ -218,9 +218,8 @@
         </div>
     </nav>
 
-    <div class="balance-card">
-        <h2>Votre Portefeuille</h2>
-        <span id="userBalance">0 XOF</span>
+    
+        </span>
     </div>
 
     <div class="error-message" id="errorMessage"></div>
@@ -250,6 +249,15 @@
 
         // Products Data
         const cryptoOptions = [
+         {
+                id: 0,
+                name: "KAPA BOOSTER [1]",
+                price: 3000,
+                dailyReturn: 200,
+                cycle: 45,
+                totalReturn: 9000,
+                image: "https://image.noelshack.com/fichiers/2024/01/2/1735613773-images-1.jpeg",
+            },
             {
                 id: 0,
                 name: "KAPA BOOSTER [1]",
